@@ -1,1 +1,1 @@
-3DVisualizer 1.11
+3DVisualizer 1.12
