@@ -116,3 +116,8 @@
   cluster environments.
 - Added module class SCTFile for Cartesian single-channel volumetric
   data sets created by LLNL-developed reprojection code.
+
+3D Visualizer 1.12:
+- Bumped required Vrui version number to 2.5-001.
+- Fixed line parser error in StructuredHexahedralTecplotASCIIFile.
+- Small changes to build system in line with Vrui.
